mobile layout bug fixes

--- a/front-end/src/styles/style.scss
+++ b/front-end/src/styles/style.scss
@@ -116,8 +116,7 @@ body {
         display: none;
     }
     &__message {
-        display: flex;
-        justify-content: center;
+        text-align: center;
     }
 
     // settings for typing animation
@@ -374,7 +373,7 @@ button[type="submit"] {
 
 .bar-graphs {
     max-width: 800px; /* cap width on large screens */
-    width: 80%; /* responsive on small screens */
+    width: 70%; /* responsive on small screens */
     margin: 0 auto; /* center it */
 }
 
@@ -507,7 +506,6 @@ button[type="submit"] {
                     &:hover {
                         background-color: white;
                         color: black;
-                        border: 2px solid black;
                     }
                 }
             }
